--- a/styles1-0.css
+++ b/styles1-0.css
@@ -1,8 +1,5 @@
 /*Homepage Nav */
 .header{
-    margin-left: 5%;
-    margin-right: 5%;
-    border: thin solid black;
     background-color: rgb(255, 255, 255);
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
@@ -12,14 +9,52 @@
     grid-area: 2;
     text-align: center;
 }
+.fa-plane{
+    text-decoration: none;
+}
+.fa-bars{
+    display: none;
+}
+.dropdown{
+    display: none;
+}
 /*Menu container*/
 .menu{
     position: relative;
     grid-area: 2;
     text-align: center;
-    border: thin solid black;
+    text-align: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.form-container{
+        height: 36vh;
+        width: 30vw;
+        margin-left: 55.5vw;
+        margin-top: 25vh; 
+        display: grid;
+        grid-template-columns: repeat(6,1fr);
+        grid-template-rows: repeat(10,1fr);
+        column-gap: .4vw;
+}
+.form-container .city{
+    grid-area: 1/1;
+    height: 5vh;
+}
+.form-container .dest{
+    grid-area: 1/2;
+    height: 5vh;
+}
+.form-container .dep-date{
+    grid-area: 3/1;
+    height:5vh
+}
+.form-container .rtn-date{
+    grid-area: 3/2;
+    height:5vh
+}
+.form-container .sbmt{
+    grid-area: 5/1/span 1/3;
 }
 /*Menu items*/
 .menu a{
@@ -37,77 +72,6 @@
     background-size: cover;
     background-repeat: no-repeat;
 
-}
-/*input form on homepage*/
-.form-container{
-    position: relative;
-    left: 50%;
-    top: 25%;
-    height: 50%;
-    width: 40%;
-    background-color: rgb(238, 238, 238);
-}
-/*input field container*/
-.form-field{
-    position: absolute;
-    left: 2%;
-    top: 5%;
-    width:95%;
-    height: 90%;
-    background-color: transparent;
-    box-shadow: 5px 4px 3px rgb(172, 171, 171);
-    display: grid;
-    column-gap: 7px;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(8, 1fr);
-    grid-template-areas:
-    " .      .     .     .    .      .    .    . "
-    " or    or     .     .    d      d    .    . "
-    "city  city  city  city  dest  dest dest dest"
-    "city  city  city  city  dest  dest dest dest"
-    "dname dname rname  rname   . sbmt sbmt   .  "
-    "depdt depdt rtndt  rtndt   . sbmt sbmt   .  "
-    "depdt depdt rtndt  rtndt   .    .    .    . ";
-}
-.form-city-origin-small{
-    grid-area: or;
-    color: gray;
-    text-decoration: underline;
-    position: absolute;
-    top: 30%;
-}
-.form-city-dest-small{
-    grid-area: d;
-    color: gray;
-    text-decoration: underline;
-    position: absolute;
-    top: 30%;
-}
-.form-container input{
-    height: 8%;
-    position: absolute;
-}
-.form-container p{
-    position: absolute;
-    top:-15%;
-    font-size: 11px;
-    margin: 0 auto;
-}
-.input-city{
-    grid-area: city;
-}
-.input-city-dest{
-    grid-area: dest;
-}
-.dep-date{
-    position: absolute;
-    top:-25%;
-    grid-area: depdt;
-}
-.rtn-date{
-    position: absolute;
-    top:-25%;
-    grid-area: rtndt;
 }
 /*results page*/
 .results{
@@ -128,7 +92,6 @@
 .results .price{
     
     background-color: dodgerblue;
-    border: thin solid black;
     height: 75%;
     width: 75%;
     margin-left: 13%;
@@ -210,27 +173,92 @@
 .popular{
     position: relative;
     margin: 0 auto;
-    border: thin solid black;
-    width: 70%;
+    width: 40vw;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(5, 1fr);
-    row-gap: 3px;
-    column-gap: 3px;
+    row-gap: 1.5vw;
 }
-.popular-results{
-    text-align: center;
-
+.popular-gallery{
+    border: thin solid black;
+    display: grid;
+    height: 425px;
+    width: 640px;
+    grid-template-columns:  repeat(3, 1fr);
+    grid-template-rows: 1fr 2fr 1fr 1fr 2fr;
+    text-decoration: none;
 }
 .city-name{
-    margin-top: 43%;
+    margin-top: 6.7vh;
+    padding-top: 1vh;
     background-color: honeydew;
+    grid-area: 5/2;
+    width: 100%;
+    height: 4vh;
+    text-align: center;
+    font-size: 25px;
+    border: thin solid black;
+    border-bottom: thin solid white;
+    color: dodgerblue;
 }
+.popular-gallery .price{
+    border: thin solid black;
+    grid-area: 1/2;
+    font-size: 34px;
+    color: dodgerblue;
+    text-align: center;
+    height: 4vh;
+    width: 100%;
+    background-color: white;
+}
+.popular-gallery
 /*------------------------------------*/
+/*Cheapest page */
+.cheapest{
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.cheap-page-container{
+    margin-left: 20%;
+    margin-right: 20%;
+}
+.cheap-page-container a{
+    border: thin solid black ;
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+    grid-template-rows: repeat(6,.5fr);
+    margin-bottom: .5%;
+}
+.cheap-page-container a:hover{
+    background-color: rgb(214, 213, 213);
+}
+.cheap-page-container .origin{
+    text-align: center;
+    grid-area: 1/3;
+}
+.cheap-page-container i{
+    grid-area: 1/4;
+    text-align: center;
+}
+.cheap-page-container .code{
+    text-align: center;
+    grid-area: 1/5;
+}
+.cheap-page-container .ct-name{
+    grid-area: 2/1/ span 3/3;
+}
+.cheap-page-container .apl-name{
+    text-align: right;
+    grid-area: 4/2/ span 2/6;
+}
+.cheap-page-container .price{
+    grid-area: 3/6/ span 4/8;
+    text-align: center;
+    font-size: 20px;
+}
 /* contacts page */
 .contacts{
     font-family: Arial, Helvetica, sans-serif;
-    border: thin solid black;
     display: grid;
     background-color: rgb(233, 233, 233);
 }
@@ -290,6 +318,7 @@
 .submit{
     grid-area: sub;
 }
+/*Contact us */
 .contacts-left hr{
     grid-area: hr;
     height: 56%;
@@ -298,7 +327,6 @@
     top: 28.2%;
     color: rgb(255, 255, 255);
 }
-
 .contact-us{
     grid-area: contact;
     display: grid;
@@ -320,8 +348,6 @@
 .bh1{
     grid-area: bh1;
 }
-/*------------------------------------*/
-/*Contact us */
 .about{
     display: grid;
     grid-template-columns: repeat(15, 1fr);
@@ -329,5 +355,4 @@
 }
 .main-about-content{
     grid-area: 2 /2 /span 5 / span 12 ;
-    border: thin solid black;
 }
