--- a/styles1-0.css
+++ b/styles1-0.css
@@ -38,7 +38,8 @@
 .dropdown{
     z-index: 2;
     position: absolute;
-    margin-top: 12vh;
+    margin-top: 9.9vh;
+    height: 3vh;
     width: 100vw;
     background-color: white;
     display: none;
