--- a/styles1-0.css
+++ b/styles1-0.css
@@ -220,7 +220,6 @@
 /*------------------------------------*/
 /* Popular page */
 .popular{
-    border: thin solid black;
     position: relative;
     margin: 0 auto;
     width: 100vw;
@@ -231,7 +230,7 @@
     grid-template-rows: max-content;
     row-gap: 1.5vw;
 }
-.popular-gallery{
+.popular a{
     border: thin solid black;
     display: grid;
     height: 50vh;
@@ -242,22 +241,16 @@
     margin-bottom: 1vh;
 }
 .city-name{
-    margin-top: 9.1vh;
-    margin-left: 4vw;
-    padding-top: 1vh;
     background-color: honeydew;
     grid-area: 5/2;
-    width: max-content;
     height: max-content;
+    margin-top: 8vh;
     text-align: center;
     font-size: 25px;
     border: thin solid black;
     color: dodgerblue;
 }
-.popular-gallery:hover .city-name{
-    background-color: #0d2631;
-}
-.popular-gallery .price{
+.popular a .price{
     border: thin solid black;
     grid-area: 1/2;
     font-size: 34px;
@@ -267,9 +260,10 @@
     width: 100%;
     background-color: white;
 }
-.popular-gallery:hover .price{
-    background-color: #0d2631;
-}
+.popular a:hover .city-name{
+    background-color: dodgerblue;
+    color: white;
+} 
 /*Cheapest page */
 .cheapest{
     margin-left: 5%;
@@ -417,6 +411,12 @@
         grid-area: 1/1/span 3/4;
         margin-top: 5vh;
     }
+    .popular a .price{
+        height: 10vh;
+    }
+    .city-name{
+        margin-left: 0;
+    }
     .footer{
         height: 9vh;
     }
@@ -440,7 +440,7 @@
         width: 99vw;
         grid-template-columns: repeat(2,1fr);
     }
-    .popular-gallery{
+    .popular a{
         margin-bottom: 0;
         width: 49vw;
     }
