--- a/styles1-0.css
+++ b/styles1-0.css
@@ -92,6 +92,9 @@
     height: 5vh;
     width: 69.9vw;
 }
+.form-container #origin::placeholder{
+    color: dodgerblue;
+}
 .form-container #destination{
     width: 69.9vw;
     height: 5vh;
@@ -264,6 +267,11 @@
     background-color: dodgerblue;
     color: white;
 } 
+.popular a:hover .price{
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+}
 /*Cheapest page */
 .cheapest{
     margin-left: 5%;
@@ -274,16 +282,21 @@
     margin-bottom: 3vh;
 }
 .cheap-page-container a{
-    border: thin solid black ;
     display: grid;
     grid-template-columns: repeat(7,1fr);
     grid-template-rows: repeat(10, .5fr);
     margin-bottom: .5%;
     text-decoration: none;
-    background-color: white;
+    background-color: rgba(223, 223, 223, 0.632);
+}
+.cheap-page-container a:hover{
+    background-color: rgba(223, 223, 223, 0.832);
 }
 .cheap-page-container a:hover .price{
-    background-color: #0d2631;
+    color: #0d2631;
+}
+.cheap-page-container a:hover .ct-name{
+    color: #0d2631;
 }
 .cheap-page-container .origin{
     text-align: center;
@@ -311,9 +324,8 @@
     grid-area: 9/1/span 9/8;
 }
 .cheap-page-container .price{
-    grid-area: 3/3/ span 5/6;
+    grid-area: 3/4/ span 5/4;
     color: dodgerblue;
-    border: thin solid black;
     background-color: white;
     text-align: center;
     font-size: 40px;
@@ -396,7 +408,53 @@
     display: none;
     grid-area: bh1;
 }
-@media screen and (orientation:landscape){
+
+@media screen and (min-width:1000px) and (orientation:landscape){
+    .form-container{
+        top:30%;
+        left:57%;
+        width: 30%;
+    }
+    .form-container #origin{
+        width: 30vw;
+    }
+    .form-container #destination{
+        width: 30vw;
+    }
+    .form-container #departing{
+        width: 30vw;
+    }
+    .form-container #arriving{
+        width: 30vw;
+    }
+    .form-container #submit{
+        width: 30vw;
+    }
+}
+
+@media screen and (min-width:1500px) and (orientation:landscape){
+    .form-container{
+        left:47%;
+        width: 21%;
+    }
+    .form-container #origin{
+        width: 20vw;
+    }
+    .form-container #destination{
+        width: 20vw;
+    }
+    .form-container #departing{
+        width: 20vw;
+    }
+    .form-container #arriving{
+        width: 20vw;
+    }
+    .form-container #submit{
+        width: 20vw;
+    }
+}
+
+@media screen and (orientation:landscape) and (min-width:667px) and (max-width:999px){
     .form-container{
         top:20%
     }
