modified:   styles1-0.css

--- a/styles1-0.css
+++ b/styles1-0.css
@@ -7,6 +7,10 @@
 .main{
     height: 85vh;
 }
+.body{
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
 /*Homepage Nav */
 .header{
     height: 60px;
